FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)

FLEX_TARGET(NSI_LEXER nsi.ll "${CMAKE_CURRENT_BINARY_DIR}/nsi.ll.cpp")
BISON_TARGET(NSI_TOKENIZER nsi.yy "${CMAKE_CURRENT_BINARY_DIR}/nsi.yy.cpp")
ADD_FLEX_BISON_DEPENDENCY(NSI_LEXER NSI_TOKENIZER)
ADD_EXECUTABLE(nsi nsi.cpp nsi.ll nsi.yy ${FLEX_NSI_LEXER_OUTPUTS} ${BISON_NSI_TOKENIZER_OUTPUTS} )
